<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorAccent"
            android:padding="@dimen/padding_items"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subtitle_text_size"
            android:text="@string/about_text"
            android:layout_margin="@dimen/padding_items"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed_by_crazy_iter"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_margin="@dimen/padding_items"/>

    </LinearLayout>

</RelativeLayout>