<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:padding="@dimen/padding_items"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/padding_items"
            android:layout_marginRight="@dimen/padding_items">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/padding_items"
            android:layout_marginRight="@dimen/padding_items">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/padding_items"
            android:layout_marginRight="@dimen/padding_items">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>