<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="@dimen/title_text_size"
            android:padding="@dimen/padding_items"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/padding_items"
            android:layout_marginRight="@dimen/padding_items"
            android:id="@+id/newNameTIL">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_name"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/padding_items"
            android:layout_marginRight="@dimen/padding_items"
            android:id="@+id/newPhoneTIL">

            <EditText
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_phone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/padding_items"
            android:layout_marginRight="@dimen/padding_items"
            android:id="@+id/newDetailsTIL">

            <EditText
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_details" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveBTNDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>