<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.crazy_iter.checkarround.MainFragments.MainFragment4">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_map_background"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/main_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_it"
            android:textAllCaps="true"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/fab_margin"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/main0LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/circle_main">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_in_easily_using_your_facebook_account_nor_sign_up"
                android:textAlignment="center"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/white"
                android:layout_margin="@dimen/fab_margin" />

        </LinearLayout>

        <Button
            android:id="@+id/signUpMainBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/fab_margin"
            android:textSize="@dimen/subtitle_text_size"
            android:padding="@dimen/fab_margin"
            android:background="@drawable/background_light_border"/>

        <Button
            android:id="@+id/signInMainBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:textSize="@dimen/subtitle_text_size"
            android:padding="@dimen/fab_margin"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</RelativeLayout>
