<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorAccent"
            android:padding="@dimen/padding_items"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_tab_size"
            android:text="@string/type_you_feedback_below"
            android:layout_margin="@dimen/padding_items"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/yourFeedback"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/your_feedback"/>

            <ImageView
                android:id="@+id/sendFeedback"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_send"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>